2011-02-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Switch openvas-scanner to pkg-config.

	* CMakeLists.txt: Move checks for openvas-libraries, glib and gnutls
	to pkg-config.

	* INSTALL: Update requirements and installation instructions.

	* src/CMakeLists.txt: Replace calls to libopenvas-config with the
	appropriate pkg-config calls.

2011-01-31  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.c: Fixed glib include.
	(preferences_process): Remove own parsing of settings file and use the
	functionality provided by openvas-libraries instead.

2011-01-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-adduser.in: Removed checking code for openvassd
	config as it is handled differently now.

2011-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Check whether the access key has a size
	greater than zero instead of just testing for existence during self
	test.

2011-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Check whether credentials were read
	correctly before attempting to synchronize.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Removed superfluous check for
	openvassd.conf.

2011-01-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Unhide "--cfg-specs" from --help and
	provide a short description.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* CMakeLists.txt: Set to 3.2+rc3.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 3.2+rc2 release.

	* CMakeLists.txt: Added some files to ignore for CPack.

	* CHANGES: Updated.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/HTTP_authentication.txt: Removed. There is no
	new or helpful information in there.
 
	* src/COPYING: Removed. Since we maintain a explicit